--- a/index.html
+++ b/index.html
@@ -9,28 +9,30 @@
     <link rel="stylesheet" href="style.css">
     <title>Marvel Project 1</title>
   </head>
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
   <body>
     <h1>How well do you know your Marvel?</h1>
-    <h2> Based on the description, guess the Marvel character
+    <h2> Based on the description, guess the Marvel character:
     </h2>
     <div class="panel">
-        <div class="result">
-
-        </div>
-        <div class="question-container" id="question">
-
-        </div>
-        <div class="option-container">
-            <button class="option" id="op1">option1</button>
-            <button class="option" id="op2">option2</button>
-            <button class="option" id="op3">option3</button>
-            <button class="option" id="op4">option4</button>
-        </div>
-    <div class="navigation">
+      <div class="navigation">
         <button class="begin">Begin</button>
         <button class="next">Next</button>
         <!-- <input type="text"> -->
-    </div>
+      </div>
+      <div class="question-container" id="question">
+        
+      </div>
+      <div class="option-container">
+        <button class="option" id="op1">option1</button>
+        <button class="option" id="op2">option2</button>
+        <button class="option" id="op3">option3</button>
+        <button class="option" id="op4">option4</button>
+      </div>
+      <div class="result">
+          <div class="right">test</div>
+          <div class="wrong"></div>
+      </div>
     </div>
     </body>
 </html>
