added more jQuery

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         
       </div>
       <div class="option-container">
-        <button class="option" id="op1">option1</button>
-        <button class="option" id="op2">option2</button>
-        <button class="option" id="op3">option3</button>
-        <button class="option" id="op4">option4</button>
+        <button class="choice" id="choice1">choice1</button>
+        <button class="choice" id="choice2">choice2</button>
+        <button class="choice" id="choice3">choice3</button>
+        <button class="choice" id="choice4">choice4</button>
       </div>
       <div class="result">
           <div class="right"></div>
