added background image

--- a/index.html
+++ b/index.html
@@ -14,25 +14,22 @@
     <h1>How well do you know your Marvel?</h1>
     <h2> Based on the description, guess the Marvel character:
     </h2>
-    <div class="panel">
+    <div class='panel'>
       <div class="navigation">
-        <button class="begin">Begin</button>
-        <button class="next">Next</button>
+        <button class='begin'>Begin</button>
+        <button class='next'>Next</button>
         <!-- <input type="text"> -->
       </div>
-      <div class="question-container" id="question">
+      <div class='question-container' id='question'>
         
       </div>
       <div class="option-container">
-        <button class="choice" id="choice1">choice1</button>
-        <button class="choice" id="choice2">choice2</button>
-        <button class="choice" id="choice3">choice3</button>
-        <button class="choice" id="choice4">choice4</button>
+        <button class='choice' id="choice1">choice1</button>
+        <button class='choice' id="choice2">choice2</button>
+        <button class='choice' id="choice3">choice3</button>
+        <button class='choice' id="choice4">choice4</button>
       </div>
-      <div class="result">
-          <div class="right"></div>
-          <div class="wrong"></div>
-      </div>
+      <div class='result'></div>
     </div>
     </body>
 </html>
