--- a/index.html
+++ b/index.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script defer src="./script.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <title>Marvel Project 1</title>
-  </head>
-  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
-  <body>
-    <h1>How well do you know your Marvel?</h1>
-    <h2> Based on the description, guess the Marvel character:
-    </h2>
-    <div class='panel'>
-      <div class="navigation">
-        <button class='begin'>Begin</button>
-        <button class='next'>Next</button>
-        <!-- <input type="text"> -->
-      </div>
-      <div class='question-container' id='question'>
-        
-      </div>
-      <div class="option-container">
-        <button class='choice' id="choice1">choice1</button>
-        <button class='choice' id="choice2">choice2</button>
-        <button class='choice' id="choice3">choice3</button>
-        <button class='choice' id="choice4">choice4</button>
-      </div>
-      <div class='result'></div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script defer src="./script.js"></script>
+  <link rel="stylesheet" href="style.css">
+  <title>Marvel Project 1</title>
+</head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+
+<body>
+  <h1>How well do you know your Marvel?</h1>
+  <h2> Based on the description, guess the Marvel character:
+  </h2>
+  <div class='panel'>
+    <div class="navigation">
+      <button class='begin'>Begin</button>
+      <button class='next'>Next</button>
+
     </div>
-    </body>
+    <div class='question-container' id='question'>
+
+    </div>
+    <div class="option-container">
+      <button class='choice' id="choice1">choice1</button>
+      <button class='choice' id="choice2">choice2</button>
+      <button class='choice' id="choice3">choice3</button>
+      <button class='choice' id="choice4">choice4</button>
+    </div>
+    <div class='result'></div>
+  </div>
+</body>
+
 </html>
-    
